--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jasonrey/learn-node-socket-io",
   "dependencies": {
     "express": "^4.10.7",
+    "jade": "^1.8.2",
     "socket.io": "^1.2.1"
   }
 }
